unpackaged/main/default/objects/zkmulti__MCCustom_Address_Source_Field__c/fields/zkmulti__Custom_Address_Source__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Custom_Address_Source__c</fullName>
    <label>Custom Address Source</label>
    <referenceTo>zkmulti__MCCustom_Address_Source__c</referenceTo>
    <relationshipLabel>Custom Address Source Fields</relationshipLabel>
    <relationshipName>Custom_Address_Source_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>