unpackaged/main/default/objects/zkmulti__MCCustom_Address_Source_Field__c/fields/zkmulti__Is_Output_Field__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Is_Output_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Output Field</label>
    <type>Checkbox</type>
</CustomField>