unpackaged/main/default/objects/zkmulti__MCCustom_Address_Source_Field__c/fields/zkmulti__Package__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Address Source Package</label>
    <referenceTo>zkmulti__MCCustom_Address_Source_Package__c</referenceTo>
    <relationshipLabel>Custom Address Source Fields</relationshipLabel>
    <relationshipName>Custom_Address_Source_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>